--- a/src/app/admin/adminnavbar/adminnavbar.component.html
+++ b/src/app/admin/adminnavbar/adminnavbar.component.html
@@ -9,10 +9,10 @@
         <div class="collapse navbar-collapse" id="navbarsExampleDefault">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item" routerLinkActive="active">
-                    <a class="nav-link" routerLink="diplomesAdmin">Diplomes</a>
+                    <a class="nav-link" [routerLink]="['/diplomesAdmin']">Diplomes</a>
                 </li>
                 <li class="nav-item" routerLinkActive="active">
-                    <a class="nav-link" routerLink="projetsAdmin">Projets</a>
+                    <a class="nav-link" [routerLink]="['/projetsAdmin']">Projets</a>
                 </li>
             </ul>
 
