--- a/src/app/admin/adminprojets/adminprojets.component.html
+++ b/src/app/admin/adminprojets/adminprojets.component.html
@@ -1,1 +1,33 @@
-<p>adminprojets works!</p>
+<div class="container mt-5 py-5">
+    <div class="card">
+        <h4 class="card-header text-center"><strong>Liste de Projets</strong></h4>
+        <div class="card-body">
+            <a class="btn btn-primary" href="#" role="button"><i class="fas fa-file" aria-hidden="true"></i> Nouveau</a>
+            <hr>
+            <table class="table table-hover">
+                <thead class="thead-light">
+                    <tr>
+                        <th scope="col" class="text-center">Id</th>
+                        <th scope="col" class="text-center">Nom</th>
+                        <th scope="col" class="text-center">Description</th>
+                        <th scope="col" class="text-center">Action</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <th scope="row">1</th>
+                        <td>Master 2 Solidarité Internationale</td>
+                        <td>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis eligendi dolorem ipsum</td>
+                        <td>
+                            <button class="btn btn-sm btn-success"><i class="far fa-edit"></i></button>
+                            <button class="btn btn-sm btn-outline-danger"><i class="far fa-trash-alt"></i></button>
+                        </td>
+                    </tr>
+
+                </tbody>
+            </table>
+
+        </div>
+    </div>
+</div>
+<!-- /container -->
