--- a/src/app/admin/formCreate/creatediplome/creatediplome.component.html
+++ b/src/app/admin/formCreate/creatediplome/creatediplome.component.html
@@ -13,7 +13,7 @@
                 <div class="form-group row ">
                     <label for="ecole" class="col-form-label col-sm-2"> Ecole</label>
                     <div class="col-sm-8 ">
-                        <input type="text " class="form-control" name="ecole" placeholder="Université de Lille" id="ecole" [(ngModel)]="diplome.ecole">
+                        <input type="text" class="form-control" name="ecole" placeholder="Université de Lille" id="ecole" [(ngModel)]="diplome.ecole">
                     </div>
 
                 </div>
@@ -28,7 +28,7 @@
                     <label for="description" class="col-form-label col-sm-2 py-5 mt-5"> Description</label>
 
                     <div class="col-sm-8">
-                        <textarea name="message" id="message " cols="30 " rows="10 " maxlength="1000 " placeholder="Message... " class="form-control " name="description" id="description" [(ngModel)]="diplome.description"></textarea>
+                        <textarea name="message" cols="30" rows="10" maxlength="1000" placeholder="Message... " class="form-control" name="description" id="description" [(ngModel)]="diplome.description"></textarea>
                     </div>
                 </div>
 
