--- a/src/app/admin/admindiplome/admindiplome.component.html
+++ b/src/app/admin/admindiplome/admindiplome.component.html
@@ -2,7 +2,7 @@
     <div class="card">
         <h4 class="card-header text-center"><strong>Liste de dîplomes</strong></h4>
         <div class="card-body">
-            <button class="btn btn-rounded btn-primary" type="button" [routerLink]="['/formCreateDiplome']"> <i class="fas fa-file" aria-hidden="true"></i>
+            <button class="btn btn-rounded btn-primary" type="button" [routerLink]="['/diplomesAdmin/formCreateDiplome']"> <i class="fas fa-file" aria-hidden="true"></i>
       Créer Dîplome
     </button>
             <hr>
