--- a/src/app/admin/formCreate/creatediplome/creatediplome.component.html
+++ b/src/app/admin/formCreate/creatediplome/creatediplome.component.html
@@ -1,4 +1,4 @@
-<div class="container mt-5 py-5 ">
+<div class="container mt-5 py-5 " style="width: 50%;">
     <div class="card ">
         <div class="card-header text-center bg-dark text-white "> {{ title }} </div>
         <div class="card-body ">
@@ -41,5 +41,4 @@
             </form>
         </div>
     </div>
-
 </div>
