--- a/src/app/admin/admindiplome/admindiplome.component.html
+++ b/src/app/admin/admindiplome/admindiplome.component.html
@@ -21,7 +21,7 @@
                         <td>{{ item.nomDiplome }}</td>
                         <td>{{ item.description }}</td>
                         <td>
-                            <button class="btn btn-sm btn-outline-success" [routerLink]="['/createDiplome/form', item.id]"><i class="far fa-edit"></i></button>
+                            <button class="btn btn-sm btn-outline-success" [routerLink]="['/diplomesAdmin/formCreateDiplome', item.id]"><i class="far fa-edit"></i></button>
                         </td>
                         <td>
                             <button class="btn btn-sm btn-outline-danger">
