--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,6 @@
 <app-adminnavbar></app-adminnavbar>
+<div class="container my-3 pb-5 wrap">
 
-<router-outlet></router-outlet>
-<!-- <app-footer></app-footer> -->
+    <router-outlet></router-outlet>
+</div>
+<app-footer></app-footer>
